--- a/ios.conf
+++ b/ios.conf
@@ -15,7 +15,7 @@ dns-server = 8.8.8.8, 8.8.4.4
 fallback-dns-server = system
 
 # Адрес обновления конфига 
-update-url = https://raw.githubusercontent.com/astor012/sr-config/main/ios.conf
+update-url = https://raw.githubusercontent.com/astor012/sr-config/main/ios.conf interval=360 strict=true
 
 # Правила для работы трафика
 [Rule]
