Update and rename ios.conf to main.conf
Add Proxy LIST

--- a/main.conf
+++ b/main.conf
@@ -22,6 +22,7 @@ update-url = https://raw.githubusercontent.com/astor012/sr-config/main/ios.conf 
 
 # Массовое правило, где подключаются список доменов, для которых будет работать VPN
 #RULE-SET,https://raw.githubusercontent.com/misha-tgshv/shadowrocket-configuration-file/main/proxy.list,PROXY
+RULE-SET,https://raw.githubusercontent.com/astor012/sr-config/main/proxy.list,PROXY
 
 # Опционально. Если домен в базе Geolite2 из РФ, то трафик идет напрямую
 GEOIP,RU,DIRECT
