--- a/main.conf
+++ b/main.conf
@@ -1,3 +1,8 @@
+# NAME: Main config settings
+# AUTHOR: Astor012
+# REPO: https://github.com/astor012/sr-config/
+# UPDATED: 2024-07-17 22:15:00
+
 # Общие настройки
 [General] 
 
