--- a/main.conf
+++ b/main.conf
@@ -20,7 +20,8 @@ dns-server = 8.8.8.8, 8.8.4.4
 fallback-dns-server = system
 
 # Адрес обновления конфига 
-update-url = https://raw.githubusercontent.com/astor012/sr-config/main/main.conf interval=360 strict=true
+# update-url = https://raw.githubusercontent.com/astor012/sr-config/main/main.conf interval=360 strict=true
+update-url = https://raw.githubusercontent.com/astor012/sr-config/main/main.conf
 
 # Правила для работы трафика
 [Rule]
